# open_env_hackathon

./: .env.example  .gitignore  Dockerfile  HF_BLOG.md  README.md  advanced_qa_test.py  app.py  baseline_outputs.json  blog_space_app.py  browser_qa.py  browser_qa_report.txt  browser_qa_report_v3.txt  finetuned_outputs.json  generate_charts.py  inference.py  llm_accuracy_report_v4.html  llm_accuracy_test.py  llm_accuracy_test_v3.py  llm_test_results_v3.json  loan_underwriting_training.ipynb  members.txt  openenv.yaml  patch_app.py  patch_app_2.py  patch_app_3.py  patch_app_4.py  patch_graders.py  patch_graders_2.py  patch_html.py  patch_html_interactive.py  patch_html_pipeline.py  patch_html_single.py  project_deep_dive.md  pyproject.toml  qa_report.html  qa_report_v2.html  qa_report_v3.html  qa_report_v4.html  qa_test_runner.py  requirements.txt  (+5 more)
.github/workflows/: sync_to_hub.yml  validate.yml
environment/: __init__.py  env.py  graders.py  models.py  rewards.py  tasks.py
frontend/: index.html
scratch/: test_eval.json
server/: __init__.py  app.py
static/: index.html
